--- a/src/styles/dungeon.module.css
+++ b/src/styles/dungeon.module.css
@@ -84,13 +84,23 @@
     display: flex;
     flex-direction: row;
     gap: 16px;
+    border: 1px solid rgb(48, 48, 66);
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: fit-content;
 }
 
+.dungeonMetatitle {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+}
 .dungeonMetadata {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 16px;
     font-weight: 600;
-    color: white;
+    color: rgb(0, 162, 255);
 }
 
 .encounterDescription {
@@ -335,6 +345,13 @@ color: #FF8000; /* Legendary item color */
     cursor: pointer;
 }
 
+.loading {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+}
+
 @media (max-width: 768px) {
     .modal {
         top: 64px;
@@ -343,5 +360,12 @@ color: #FF8000; /* Legendary item color */
 
     .itemPopup {
         width: 200px;
+    }
+
+    .dungeonMeta {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        width: auto;
     }
 }
