Image & content tweak

--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -122,7 +122,7 @@
 .homeSectionTwoLeft {
   height: 100%;
   width: 50%;
-  background: url('../images/heroImage.webp');
+  background: url('../images/forumimage.webp');
   background-size: cover;
   border-radius: 12px;
   border: 1px solid rgb(41, 44, 65);
